deploy/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: teamcard-nginx-ingress
  namespace: teamcard
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`teamcard.ezlab.ru`)
      kind: Rule
      services:
        - name: teamcard-nginx
          port: 80
    - match: Host(`teamcard.staging.box.ezlab.ru`)
      kind: Rule
      services:
        - name: teamcard-nginx
          port: 80
